--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RenderDb": "Host=postgresql://baza_hivn_user:FFYWjaC1IWaAiVmZxhw0k7E9fi0jaDwZ@dpg-d4ur87ur433s73dq0fgg-a/baza_hivn;Username=baza_hivn_user;Password=FFYWjaC1IWaAiVmZxhw0k7E9fi0jaDwZ;Port=5432"
+    "RenderDb": "Server=dpg-d4ur87ur433s73dq0fgg-a.render.com,1433;Database=baza_hivn;User Id=baza_hivn_user;Password=FFYWjaC1IWaAiVmZxhw0k7E9fi0jaDwZ;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
